// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main query 1`] = `
Object {
  "data": Array [
    null,
  ],
  "error": null,
}
`;

exports[`main write 1`] = `
Object {
  "data": null,
  "error": null,
}
`;
